# poll-tracker

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  test-nb.ipynb
.github/workflows/: github-actions-demo.yml
poll_tracker/data/: polls.csv  raw_polls.csv  trends.csv
poll_tracker/data_cleaning/: data_cleaning.py
poll_tracker/data_transform/: data_transform.py
poll_tracker/scripts/: extract.py  transform.py
tests/: test_data_cleaning.py  test_data_transform.py
