[tool.poetry]
name = "poll_tracker"
version = "0.1.0"
description = "Collect and clean polling data"
authors = ["Katya Beebe <katerina.beebe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "^2.0.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5"
flake8 = "^4"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[tool.black]
skip-string-normalization = true
line-length = 79
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | config_generator_databricks_and_processing
    | config_generator_databricks_and_training
    | workflows
    |
  )/
)
'''

[tool.isort]
profile = 'black'
line_length = 79

[tool.poetry.scripts]
transform = 'poll_tracker.scripts.transform:main'